# voicy-bot-refactor

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  start_bot.sh
alembic/: env.py
alembic/versions/: 97a438a990c7_init_users_table.py  e32efe79c83c_init_users_table.py
core/: utils.py
infrastructure/db/: db.py  models.py  repositories.py  uow.py
interfaces/api/: main.py
interfaces/bot/: filters.py  main.py
interfaces/cli/: main.py
services/: features.py  taps_service.py  top_service.py  user_service.py
tests/: test_user_service.py
