[project]
name = "voicy-bot"
version = "0.1.0"
description = "Refactored Telegram bot with clean architecture"
dependencies = [
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "loguru",
    "typer[all]",
    "psycopg2-binary",
    "pytest",
    "fastapi",
    "uvicorn[standard]",
    "aiogram>=3.0.0"

]
requires-python = ">=3.12"